First shot at bringing in wildfly-core and creating a custom distro with liveoak.

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -98,6 +98,7 @@
         <module>stomp</module>
         <module>interceptor</module>
         <module>container</module>
+        <module>wildfly</module>
         <module>autosetup</module>
 
         <module>mongo</module>
