--- a/pom.xml
+++ b/pom.xml
@@ -6,21 +6,31 @@
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0           http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+  <parent>
+    <groupId>org.jboss</groupId>
+    <artifactId>jboss-parent</artifactId>
+    <version>14</version>
+  </parent>
+
+<!--
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
     </parent>
+-->
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.liveoak</groupId>
     <artifactId>liveoak</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>8.0.0.Final</version>
     <name>liveoak</name>
     <packaging>pom</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <vertx.version>2.0.1-final</vertx.version>
         <vertx.testtools.version>2.0.1-final</vertx.testtools.version>
+        <wildfly.version>8.0.0.Final</wildfly.version>
         <netty.version>4.0.2.Final</netty.version>
         <jboss.modules.version>1.3.0.Beta2</jboss.modules.version>
         <jboss.msc.version>1.2.0.CR1</jboss.msc.version>
@@ -94,6 +104,7 @@
 -->
         <module>console</module>
         <module>dist</module>
+        <module>wildfly-dist</module>
         <module>testsuite</module>
     </modules>
     <developers>
@@ -117,6 +128,22 @@
     </licenses>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-core</artifactId>
+                <version>${wildfly.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-controller</artifactId>
+                <version>${wildfly.version}</version>
+            </dependency>
+           <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-server</artifactId>
+                <version>${wildfly.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
