--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.liveoak</groupId>
     <artifactId>liveoak</artifactId>
-    <version>8.0.0.Final</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>liveoak</name>
     <packaging>pom</packaging>
     <properties>
@@ -90,6 +90,11 @@
         <version.embedmongo.plugin>0.1.10</version.embedmongo.plugin>
         <version.codehaus.helper.plugin>1.8</version.codehaus.helper.plugin>
         <version.google.formatter.plugin>0.3.1</version.google.formatter.plugin>
+
+        <maven.compiler.argument.source>1.8</maven.compiler.argument.source>
+        <maven.compiler.argument.target>1.8</maven.compiler.argument.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
     </properties>
     <modules>
