--- a/wildfly-dist/pom.xml
+++ b/wildfly-dist/pom.xml
@@ -13,8 +13,8 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>liveoak-dist</artifactId>
-    <name>liveoak-dist</name>
+    <artifactId>liveoak-wildfly-dist</artifactId>
+    <name>liveoak-wildfly-dist</name>
     <packaging>pom</packaging>
     <dependencies>
         <dependency>
