Added build of custom keycloak war
Conflicts:
	pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,7 @@
 <!--
         <module>testsuite</module>
 -->
+        <module>keycloak</module>    
     </modules>
     <developers>
         <developer>
