--- a/wildfly-dist/pom.xml
+++ b/wildfly-dist/pom.xml
@@ -24,6 +24,12 @@
         </dependency>
         <dependency>
             <groupId>io.liveoak</groupId>
+            <artifactId>liveoak-keycloak</artifactId>
+            <type>war</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.liveoak</groupId>
             <artifactId>liveoak-spi</artifactId>
         </dependency>
         <dependency>
