--- a/modules/wildfly/pom.xml
+++ b/modules/wildfly/pom.xml
@@ -27,6 +27,11 @@
         </dependency>
         <dependency>
             <groupId>io.liveoak</groupId>
+            <artifactId>liveoak-mongo-launcher</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.liveoak</groupId>
             <artifactId>liveoak-container</artifactId>
             <scope>provided</scope>
         </dependency>
@@ -39,6 +44,12 @@
         <dependency>
             <groupId>org.wildfly</groupId>
             <artifactId>wildfly-server</artifactId>
+            <version>${wildfly.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-ee</artifactId>
             <version>${wildfly.version}</version>
             <scope>provided</scope>
         </dependency>
