Bring keycloak module back.  Tests @Ignored since they seem to test against an empty mongo, and complain about an NPE when trying to fetch the admin-realm.

--- a/modules/keycloak/pom.xml
+++ b/modules/keycloak/pom.xml
@@ -179,7 +179,7 @@
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-model-mongo</artifactId>
-            <scope>test</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
