--- a/modules/keycloak/pom.xml
+++ b/modules/keycloak/pom.xml
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <scope>test</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
